# beautiful-atoms

./: .coveragerc  .gitignore  .pre-commit-config.yaml  CITATION.cff  Dockerfile  README.md  Untitled.ipynb  __init__.py  base.py  batom.py  batoms.py  bbond.py  bdraw.py  bio.py  bond.py  bonds.py  bondsetting.py  boundary.py  bselect.py  bspecies.py  build.py  build_extension  build_extension.sh  butils.py  camera.py  cell.py  custom_property.py  data.py  env.yml  fe-dislocation.in  gui_batoms.py  gui_cell.py  gui_io.py  gui_volume.py  h2o-20-20-20.xyz  h2o-atoms.xyz  h2o-r.xyz  install.py  isosurfacesetting.py  light.py  (+17 more)
Dockerfiles/: Dockerfile.base_2.93  Dockerfile.base_3.0  Dockerfile.base_3.1  Dockerfile.base_3.x  Dockerfile.env  Dockerfile.main  bl_release_parser.py
batoms/: __init__.py  attribute.py  base.py  batom.py  batoms.py  blender_manifest.toml  blender_manifest.toml.template  bonds.py  bondsetting.py  boundary.py  bselect.py  bspecies.py  build.py  butils.py  cell.py  console.py  custom_property.py  data.py  install.py  install_dependencies.py  isosurfacesetting.py  logger.py  material.py  metaball.py  mssetting.py  neighborlist.py  pdbparser.py  planesetting.py  preferences.py  search_bond.py  slicebatoms.py  source_data.py  tools.py  volumetric_data.py
gui/: gui_ase.py  gui_batom.py  gui_batoms.py  gui_bond.py  gui_build.py  gui_cell.py  gui_io.py  gui_plane.py  gui_polyhedra.py  gui_pubchem.py  gui_pymatgen.py  gui_render.py  gui_rscb.py  gui_volume.py  ops_add_molecule.py
modal/: force_field.py  record_selection.py  rigid_body.py
test/: test.py  (+45 more)
(+329 files in other folders)
